# computational_geometry

closests_points/: closests_points_n_log_n_log_n.cpp
convex_hull/: graham_2d.cpp  quickhull_2d.cpp
diameter/: diameter_2d.cpp
half_plane_intersection/: dual_convex_hull.cpp
min_disk/: min_disk_randomized.cpp
nearest_neighbour_search/: kd_tree.cpp
point_in_polygon/: convex_polygon.cpp  nonconvex_polygon.cpp
segments_intersection/: CMakeLists.txt  tests.h  two_segments_intersection.cpp
triangulation/: ear_clipping.cpp
